--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,5 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fog-pack = "0.1"
-rocksdb = "0.12.2"
-crossbeam-utils = "0.6.5"
-crossbeam-channel = "0.3.8"
+fog-pack = "^0.1"
+futures-sink = "^0.3"
